deployment/workers/worker-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: valhalla-private
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: valhalla
  policyTypes: [Ingress]
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: controller
      ports:
        - protocol: TCP
          port: 8002
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nominatim-private
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: nominatim
  policyTypes: [Ingress]
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: controller
      ports:
        - protocol: TCP
          port: 8083
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nominatim-db-private
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: nominatim-db
  policyTypes: [Ingress]
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: nominatim
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: search-indexer
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: poi-sync
      ports:
        - protocol: TCP
          port: 5432
